FASE-02/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: desafio-iac
  labels:
    app: desafio-iac
    fase: "02"
