FASE-02/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desafio-iac
  namespace: desafio-iac
  labels:
    app: desafio-iac
spec:
  replicas: 2
  selector:
    matchLabels:
      app: desafio-iac
  template:
    metadata:
      labels:
        app: desafio-iac
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: desafio-iac
          image: ghcr.io/SEU_USUARIO/desafio-iac:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 768Mi
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
