FASE-02/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desafio-iac
  namespace: desafio-iac
  labels:
    app: desafio-iac
spec:
  type: ClusterIP
  selector:
    app: desafio-iac
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: desafio-iac-lb
  namespace: desafio-iac
  labels:
    app: desafio-iac
spec:
  type: LoadBalancer
  selector:
    app: desafio-iac
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
