FASE-02/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: desafio-iac
  namespace: desafio-iac
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: desafio-iac.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: desafio-iac
                port:
                  number: 80
